--- a/.github/workflows/conda_env.yml
+++ b/.github/workflows/conda_env.yml
@@ -13,7 +13,7 @@ jobs:
           miniconda-version: "latest"
           channels: conda-forge, bioconda
           activate-environment: test
-          python-version: 3.9
+          python-version: "3.10"
 
       - name: Install conda packages
         run: |
