--- a/.github/workflows/conda_env.yml
+++ b/.github/workflows/conda_env.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - uses: conda-incubator/setup-miniconda@v3
         with:
-          miniconda-version: "latest"
+          miniforge-version: latest
           channels: conda-forge, bioconda
           activate-environment: test
           python-version: "3.10.*"
