--- a/.github/workflows/noise_processing.yml
+++ b/.github/workflows/noise_processing.yml
@@ -8,8 +8,9 @@ on:
     #  - main
     #  - caching
 
-  #schedule:
-  #  - cron: '51 21 8 7 *'
+  schedule:
+    - cron: '24 22 7 10 *'
+    
     
 jobs:
   process:
